@@ -5,7 +5,7 @@ Author: Greg Snow
 Description: This package is a set of demonstration functions that can be used in a classroom to demonstrate statistical concepts, or on your own to better understand the concepts or the programming.
 Maintainer: Greg Snow <greg.snow@imail.org>
 License: Artistic-2.0
-Date: 2013-07-21
+Date: 2013-12-21
 Suggests: tkrplot, lattice, MASS, rgl, tcltk, tcltk2, R2wd, EBImage, png, ggplot2, logspline, maptools
 LazyData: true
 KeepSource: true
