@@ -3,7 +3,7 @@ export(bct,char2seed,chisq.detail,ci.examp,clipplot,clt.examp,cnvrt.coords,
        flip.rgl.coin,gp.close,gp.open,gp.plot,gp.splot,gp.send,hpd,
        Pvalue.norm.sim,Pvalue.binom.sim,simfun,
        run.Pvalue.norm.sim,run.Pvalue.binom.sim,
-       lattice.demo,loess.demo,mle.demo,
+       lattice.demo,loess.demo,mle.demo, digits,
        ms.arrows,ms.female,ms.filled.polygon,ms.male,ms.polygon,ms.polygram,
        ms.sunflowers,ms.image,my.symbols,panel.dice,plot.dice,rgl.coin,
        rgl.die,plot2script,plotFagan,plotFagan2,plotFagan.old,ms.face,
