@@ -1,5 +1,7 @@
 New in TeachingDemos version 2.10
 
+* Added digits function to compute digits of an integer
+
 * Fixed zoomplot to work with R 3.0
 
 * Fixed subplot function to work better in multi frame plots with type='fig'.
